--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   color: #434455;
 }
-.logo {
+.header-items .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -48,6 +48,12 @@ body {
 }
 footer {
   background-color: #2e2f42;
+}
+footer .logo{
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.25;
 }
 footer .logo,
 .logo-text {
