--- a/css/styles.css
+++ b/css/styles.css
@@ -2,16 +2,19 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #434455;
+  background-color: #ffffff;
 }
 .header-items .logo {
   font-family: "Raleway", sans-serif;
+  color: #4d5ae5;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.25;
-  color: #2e2f42;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .logo span {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 .page-button {
   color: #ffffff;
@@ -20,20 +23,35 @@ body {
 }
 .header-items a {
   font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .header-contacts a {
   color: #434455;
+  font-style: normal;
+}
+.header-link .link {
+  font-weight: 500;
+  color: #2e2f42;
+}
+.header-link .link:hover,
+.header-link .link:focus {
+  color: #404bbf;
 }
 .header-items a:hover,
 .header-items a:focus {
   color: #4d5ae5;
 }
+.header-contacts a:hover,
+.header-contacts a:focus {
+  color: #404bbf;
+}
 /* .page-button:hover,
 .page-button:focus {
   color: #4d5ae5;
 } */
-.logo:hover,
-.logo:focus {
+.logo span:hover,
+.logo span:focus {
   color: #4d5ae5;
 }
 .main-section-2 {
@@ -45,23 +63,50 @@ body {
 }
 .main-section {
   background-color: #2e2f42;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
+.main-section-1 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
 footer {
   background-color: #2e2f42;
 }
-footer .logo{
+footer .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.25;
+  color: #f4f4fd;
 }
 footer .logo,
 .logo-text {
   color: #ffffff;
 }
+footer .logo span {
+  color: #4d5ae5;
+}
+footer .logo:hover,
+footer .logo:focus {
+  color: #4d5ae5;
+}
 .page-button {
   font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
+.page-button:hover,
+.page-button:focus {
+  color: #404bbf;
+}
+
 .section-title {
   font-size: 20px;
 }
