--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #434455;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 .header-items .logo {
   font-family: "Raleway", sans-serif;
