--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.header-contacts a {
+.header-contacts .contact{
   color: #434455;
   font-style: normal;
 }
