--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03;
   text-transform: uppercase;
 }
 .logo-span{
@@ -24,7 +24,7 @@ body {
 .header-items a {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02;
 }
 .header-contacts{
   font-style: normal;
@@ -67,13 +67,13 @@ body {
   background-color: #2e2f42;
   line-height: 1.07;
   text-align: center;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02;
 }
 .main-section-1 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02;
   color: #2e2f42;
 }
 
@@ -103,7 +103,7 @@ footer .logo:focus {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.04;
 }
 .page-button:hover,
 .page-button:focus {
