--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.03;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .logo-span {
@@ -69,13 +69,13 @@ body {
   text-align: center;
 }
 .main-section .main-page-title {
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
 }
 .main-section-1 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
@@ -105,7 +105,7 @@ footer .logo:focus {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04em;
 }
 .page-button:hover,
 .page-button:focus {
