--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 .header-items a {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
 }
 .header-contacts {
   font-style: normal;
