--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,8 @@ body {
 }
 .main-section-2 {
   background-color: #f4f4fd;
-  font-weight: 500;
 }
+
 .main-page-title {
   font-size: 56px;
   color: #ffffff;
@@ -72,13 +72,19 @@ body {
 }
 
 .main-section-1 {
-  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
+.main-section-1 .section-title {
+  font-weight: 500;
+}
+.main-section-1 .section-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 footer {
   background-color: #2e2f42;
 }
