--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,23 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.main-section-2 {
+  font-size: 20px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  text-transform: capitalize;
+  background-color: #FFFFFF;
+}
+.main-section-2 .section-title {
+  color: #2e2f42;
+}
+.main-section-2 .section-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 footer {
   background-color: #2e2f42;
 }
