--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,16 @@ body {
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
+  background-color: #f4f4fd;
+}
+.main-section-2 .section-title,
+.section-text {
   background-color: #ffffff;
+}
+.main-section-2 .section-title {
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 footer {
