--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ body {
 .main-section-2 {
   font-size: 20px;
   line-height: 1.11;
-  letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
@@ -103,7 +102,33 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+.main-section-2 .section-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
+.main-section-3 {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.main-section-3 .section-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.main-section-3 .section-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 footer {
   background-color: #2e2f42;
 }
@@ -111,15 +136,21 @@ footer .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.25;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+footer .logo-text {
   color: #f4f4fd;
+  letter-spacing: 0.02em;
 }
 footer .logo,
 .logo-text {
-  color: #ffffff;
+  line-height: 1.5;
 }
 footer .logo-span {
-  color: #4d5ae5;
+  color: #f4f4fd;
   text-transform: uppercase;
 }
 footer .logo:hover,
