--- a/css/styles.css
+++ b/css/styles.css
@@ -88,26 +88,26 @@ body {
 .main-section-2 {
   font-size: 20px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
   background-color: #f4f4fd;
 }
-
-.main-section-2 .section-image {
-  background-color: #ffffff;
-}
 .main-section-2 .section-title {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  background-color: #ffffff;
 }
 .main-section-2 .section-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
-  background-color: #ffffff;
   color: #434455;
+}
+.main-section-2 .section-image,
+.section-title,
+.section-text {
+  background-color: #ffffff;
 }
 
 .main-section-3 {
@@ -133,6 +133,7 @@ body {
 }
 footer {
   background-color: #2e2f42;
+  line-height: 1.5;
 }
 footer .logo {
   font-family: "Raleway", sans-serif;
