--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ body {
 .main-section-2 .page-title {
   letter-spacing: 0.02em;
 }
-.main-section-2 .page-title .page-list{
+.main-section-2 .page-title {
   background-color: #f4f4fd;
 }
 .main-section-2 .page-element {
