--- a/css/styles.css
+++ b/css/styles.css
@@ -103,11 +103,9 @@ body {
 }
 .main-section-2 .page-title {
   letter-spacing: 0.02em;
-}
-.main-section-2 .page-title {
   background-color: #f4f4fd;
 }
-.main-section-2 .page-element {
+.main-section-2 .page-list .page-element {
   background-color: #ffffff;
 }
 .main-section-2 .section-title {
