--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body {
   letter-spacing: 0.02em;
   background-color: #f4f4fd;
 }
-.main-section-2 .page-element {
+.main-section-2 .page-list .page-element {
   background-color: #ffffff;
 }
 .main-section-2 .section-title {
